--- a/DMS-Jasmine/TEPLQMS/TEPLQMS/Views/PrintRequest/Index.cshtml
+++ b/DMS-Jasmine/TEPLQMS/TEPLQMS/Views/PrintRequest/Index.cshtml
@@ -125,6 +125,55 @@
                                     <div class="row">
                                         <div class="col-lg-6 col-sm-6 col-xs-12">
                                             <div class="form-group">
+                                                <label class="control-label col-lg-4"><strong>Print Copies</strong><span class="mandatory">*</span></label>
+                                                <div class=" col-lg-6">
+                                                    <input title="Print Copies" class="form-control manfield numeric-input" id="PrintCopies" name="PrintCopies" type="text" value="" placeholder="Print Copies">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-6 col-sm-6 col-xs-12">
+                                            <div class="form-group">
+                                                <label class="control-label col-lg-4"><strong>Print Page</strong><span class="mandatory">*</span></label>
+                                                <div class="col-lg-6">
+                                                    <div style="display: flex;">
+                                                        <div class="radio" style="flex: 1;">
+                                                            <label>
+                                                                <input type="radio" name="form-field-radio" id="PrintPageAll" value="All" checked>
+                                                                <span class="text">All</span>
+                                                            </label>
+                                                        </div>
+                                                        <div class="radio" style="flex: 1;">
+                                                            <label>
+                                                                <input type="radio" name="form-field-radio" id="PrintPageSelected" value="PrintPageSelected">
+                                                                <span class="text">Pages</span>
+                                                            </label>
+                                                        </div>
+                                                        <div style="flex: 2;">
+                                                            <input type="text" class="form-control manfield numericandcomma-input" id="PrintPageInput" name="Number"
+                                                                   placeholder="e.g. 1,2,5,6 or 1-5">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-6 col-sm-6 col-xs-12">
+                                            <div class="form-group">
+                                                <label class="control-label col-lg-4"><strong>Paper Size</strong><span class="mandatory">*</span></label>
+                                                <div class=" col-lg-6">
+                                                    <select class="form-control manfield" title="Paper Size" name="PaperSize" id="ddlPaperSize">
+                                                        <option value="0">Select a value</option>
+                                                        <option value="A4">A3</option>
+                                                        <option value="A3">A4</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-6 col-sm-6 col-xs-12">
+                                            <div class="form-group">
                                                 <label class="control-label col-lg-4"><strong>Reason For Print</strong><span class="mandatory">*</span></label>
                                                 <div class="col-lg-7">
                                                     <textarea class="form-control manfield" rows="3" id="PrintReason" style="resize:none;" placeholder="Reason for Print..."></textarea>
@@ -142,26 +191,26 @@
                                     </div>
 
                                     @*<div class="row">
-                                        <div class="col-lg-12 col-sm-12 col-xs-12">
-                                            <div class="form-group">
-                                                <label class="control-label col-lg-2"><strong>Reason For Print</strong><span class="mandatory">*</span></label>
-                                                <div class="col-lg-9">
-                                                    <textarea class="form-control manfield" rows="2" id="PrintReason" style="resize:none;" placeholder="Reason for Print..."></textarea>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+            <div class="col-lg-12 col-sm-12 col-xs-12">
+                <div class="form-group">
+                    <label class="control-label col-lg-2"><strong>Reason For Print</strong><span class="mandatory">*</span></label>
+                    <div class="col-lg-9">
+                        <textarea class="form-control manfield" rows="2" id="PrintReason" style="resize:none;" placeholder="Reason for Print..."></textarea>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-                                    <div class="row">
-                                        <div class="col-lg-12 col-sm-12 col-xs-12">
-                                            <div class="form-group">
-                                                <label class="col-lg-2 control-label" style=""><strong>Comments</strong></label>
-                                                <div class="col-lg-9" style="">
-                                                    <textarea class="form-control" rows="4" id="txtComments" style="resize:none;" placeholder="Comments..."></textarea>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>*@
+        <div class="row">
+            <div class="col-lg-12 col-sm-12 col-xs-12">
+                <div class="form-group">
+                    <label class="col-lg-2 control-label" style=""><strong>Comments</strong></label>
+                    <div class="col-lg-9" style="">
+                        <textarea class="form-control" rows="4" id="txtComments" style="resize:none;" placeholder="Comments..."></textarea>
+                    </div>
+                </div>
+            </div>
+        </div>*@
                                     <div class="row">
                                         <div class="col-lg-2 col-sm-12 col-xs-12">
 
@@ -170,7 +219,7 @@
                                             <table class="table table-striped table-hover table-bordered" id="ApprovalUsers">
                                                 <thead>
                                                     <tr>
-                                                        <th  colspan="3" class="table-bordered btn-azure" style="text-align:center">Approval Stages</th>
+                                                        <th colspan="3" class="table-bordered btn-azure" style="text-align:center">Approval Stages</th>
                                                     </tr>
                                                     <tr role="row">
                                                         <th>
@@ -216,7 +265,34 @@
             $('.frmFields').hide();
             BindDropDownBoxes("/PrintRequest/GetDropDownBoxes", $('#ddlLocation'), '', '', '', 'Select a value');
         });
+        document.querySelectorAll('.numeric-input').forEach(function (element) {
+            element.addEventListener('input', function (e) {
+                this.value = this.value.replace(/[^0-9]/g, '');
+            });
+        });
+        document.querySelectorAll('.numericandcomma-input').forEach(function (element) {
+            element.addEventListener('input', function (e) {
+                this.value = this.value.replace(/[^0-9,-]/g, '');
+            });
+        });
+        document.addEventListener('DOMContentLoaded', function () {
+            // Function to toggle visibility and focus of the input field
+            function toggleInputField() {
+                var printPageOption = document.querySelector('input[name="form-field-radio"]:checked').id;
+                var printPageInput = document.getElementById('PrintPageInput');
 
+                if (printPageOption === 'PrintPageSelected') {
+                    printPageInput.classList.remove('hidden');
+                    printPageInput.focus();
+                } else {
+                    printPageInput.classList.add('hidden');
+                }
+            }
+            toggleInputField();
+            document.querySelectorAll('input[name="form-field-radio"]').forEach(function (radio) {
+                radio.addEventListener('change', toggleInputField);
+            });
+        });
         $("#btnGetDetails").click(function () {
             $("#ApprovalUsersBody").empty();
             if ($('#DocumentNo').val().trim() != '') {
@@ -265,6 +341,11 @@
                             $('.frmFields').hide();
                             $('.btn-warning').trigger('click');
                             $('.modal-body').html('Workflow is in progress for the Document Number.');
+                        }
+                        else if (data.message[1].WFStatus == 'alreadyexists') {
+                            $('.frmFields').hide();
+                            $('.btn-warning').trigger('click');
+                            $('.modal-body').html('Print Request Already Exists.');
                         }
                         else {
 
@@ -326,17 +407,31 @@
         }
 
         $("#btnSubmit").click(function () {
-            if ($("#PrintReason").val().trim() != '' && $("#ddlLocation").val() != '0') {
+            if ($("#PrintReason").val().trim() != '' && $("#ddlLocation").val() != '0' && $("#PrintCopies").val().trim() != '' &&
+                $("#ddlPaperSize").val() != '0' && $("#PrintPageInput").val().trim() != '') {
 
                 $("#PrintReason").removeClass("manfieldredborder"); $("#ddlLocation").removeClass("manfieldredborder");
+                $("#PrintCopies").removeClass("manfieldredborder"); $("#ddlPaperSize").removeClass("manfieldredborder"); $("#PrintPageInput").removeClass("manfieldredborder");
 
                 var fileData = new FormData();
+                var printPageOption = $('input[name="form-field-radio"]:checked').val();
+                var printPageInputValue = $('#PrintPageInput').val().trim();
+                var printPageOptionValue;
+                // the value to append based on the selected radio button
+                if (printPageOption === 'PrintPageSelected') {
+                    printPageOptionValue = printPageInputValue;
+                } else {
+                    printPageOptionValue = 'All';
+                }
+                fileData.append("PrintPageOption", printPageOptionValue);   
                 fileData.append("DocumentID", $("#divDocGUID").text());
                 fileData.append("DocumentPublishID", $("#DocumentPublishID").text());
                 fileData.append("DocumentNo", $("#divDocNumber").text()); 
                 fileData.append("RevisionNo", $("#lblLastVersion").text());
                 fileData.append("PrintLocationID", $("#ddlLocation").val());
                 fileData.append("PrintReason", $("#PrintReason").val().trim());
+                fileData.append("PrintCopies", $("#PrintCopies").val().trim());
+                fileData.append("PaperSize", $("#ddlPaperSize").val());
                 fileData.append("ActionComments", $("#txtComments").val());
 
                 fileData.append("DocumentLevel", $("#divDocumentLevel").text());
@@ -393,11 +488,35 @@
             }
             else {
                 $("#ddlLocation").removeClass("manfieldredborder");
-                $("#PrintReason").removeClass("manfieldredborder");                
+                $("#PrintReason").removeClass("manfieldredborder"); 
+                $("#PrintCopies").removeClass("manfieldredborder");
+                $("#ddlPaperSize").removeClass("manfieldredborder");
                 var ermsg = '';
                 if ($("#ddlLocation").val() == "0") {
                     $("#ddlLocation").addClass("manfieldredborder");
                     ermsg = 'Print Location';
+                }
+                if ($("#PrintCopies").val().trim() == '') {
+                    $("#PrintCopies").addClass("manfieldredborder");
+                    ermsg += '<br />'
+                    ermsg += 'Print Copies';
+                }
+                var printPageOption = $('input[name="form-field-radio"]:checked').val();
+                var printPageInputValue = $('#PrintPageInput').val().trim();
+                if (printPageOption === 'PrintPageSelected') {
+                    if (printPageInputValue == '') {
+                        $('#PrintPageInput').addClass("manfieldredborder");
+                        ermsg += '<br />'
+                        ermsg += 'Print Page Numbers';
+                    }
+                    else {
+                        $('#PrintPageInput').removeClass("manfieldredborder");
+                    }
+                }
+                if ($("#ddlPaperSize").val() == '0') {
+                    $("#ddlPaperSize").addClass("manfieldredborder");
+                    ermsg += '<br />'
+                    ermsg += 'Paper Size';
                 }
                 if ($("#PrintReason").val().trim() == '') {
                     $("#PrintReason").addClass("manfieldredborder");
