Added log messages for pending docs issues

--- a/DMS-Jasmine/TEPLQMS/Areas/Admin/Views/PendingDocuments/Index.cshtml
+++ b/DMS-Jasmine/TEPLQMS/Areas/Admin/Views/PendingDocuments/Index.cshtml
@@ -280,7 +280,7 @@
                 },
                 error: function (xhr) {
                     $('.btn-danger').trigger('click');
-                    $('.modal-body').html('Error while getting Pending documents.');
+                    $('.modal-body').html('Failed to get Pending documents.');
                 }
             });
         }
