--- a/DMS-Jasmine/TEPLQMS/Views/Dashboard/Index.cshtml
+++ b/DMS-Jasmine/TEPLQMS/Views/Dashboard/Index.cshtml
@@ -160,12 +160,14 @@
                             <td style="text-align:center" nowrap>
                                 @if (@txt.DocumentLevel == "Level 4")
                                 {
-                                    <a style="text-decoration:underline;white-space:nowrap;" href='@Url.Action("DownloadDocument", "Dashboard", new { folderPath = @txt.ReadableFilePath, folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder, versionNo = @txt.OriginalVersion, fileName = @txt.ReadableDocumentName })'>Download</a>
+                                    <a style="text-decoration:underline;white-space:nowrap;" href='@Url.Action("DownloadDocument", "Dashboard", new { folderPath = @txt.ReadableFilePath, folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder, versionNo = @txt.OriginalVersion, fileName = @txt.ReadableDocumentName })'>ReadableDocument</a>
+                                    <a style="text-decoration:underline;white-space:nowrap;" href='@Url.Action("DownloadDocument", "Dashboard", new { folderPath = @txt.EditableFilePath, folder = TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder, versionNo = @txt.OriginalVersion, fileName = @txt.EditableDocumentName })'>EditableDocument</a>
                                 }
                                 else
                                 {
                                     @*<a class="anc2" title="View Document" target="_blank" style="text-decoration:underline;" href='@TEPL.QMS.Common.Constants.QMSConstants.ViewerURL?stage=Publish&version=@txt.OriginalVersion.ToString().Split('.')[0]&documentid=@txt.DocumentID'>View</a>*@
-                                    <a title="View Document" target="_blank" style="text-decoration:underline;" href='~/PDFViewer/ConfigureDocumentURL?docURL=@TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder/@txt.ReadableFilePath/@txt.ReadableDocumentName'> View </a>
+                            <a title="View Document" target="_blank" style="text-decoration:underline;" href='~/PDFViewer/ConfigureDocumentURL?docURL=@TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder/@txt.ReadableFilePath/@txt.ReadableDocumentName'> ReadableDocument </a>
+                                    <a title="View Document" target="_blank" style="text-decoration:underline;" href='~/PDFViewer/ConfigureDocumentURL?docURL=@TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder/@txt.EditableFilePath/@txt.EditableDocumentName'> EditableDocument </a>
                                 }
                             </td>
                         </tr>
