Print Request validation (17-09-2024)

--- a/DMS-Jasmine/TEPLQMS/Views/PrintRequest/Index.cshtml
+++ b/DMS-Jasmine/TEPLQMS/Views/PrintRequest/Index.cshtml
@@ -411,7 +411,7 @@
                 $("#ddlPaperSize").val() != '0' && $("#PrintPageInput").val().trim() != '') {
 
                 $("#PrintReason").removeClass("manfieldredborder"); $("#ddlLocation").removeClass("manfieldredborder");
-                $("#PrintCopies").removeClass("manfieldredborder"); $("#ddlPaperSize").removeClass("manfieldredborder"); $("#PrintPageInput").removeClass("manfieldredborder");
+                $("#PrintCopies").removeClass("manfieldredborder"); $("#ddlPaperSize").removeClass("manfieldredborder"); /*$("#PrintPageInput").removeClass("manfieldredborder");*/
 
                 var fileData = new FormData();
                 var printPageOption = $('input[name="form-field-radio"]:checked').val();
