level 4 document editable copy is allowed to users (18-09-2024)

--- a/DMS-Jasmine/TEPLQMS/Views/Dashboard/Index.cshtml
+++ b/DMS-Jasmine/TEPLQMS/Views/Dashboard/Index.cshtml
@@ -166,8 +166,8 @@
                                 else
                                 {
                                     @*<a class="anc2" title="View Document" target="_blank" style="text-decoration:underline;" href='@TEPL.QMS.Common.Constants.QMSConstants.ViewerURL?stage=Publish&version=@txt.OriginalVersion.ToString().Split('.')[0]&documentid=@txt.DocumentID'>View</a>*@
-                            <a title="View Document" target="_blank" style="text-decoration:underline;" href='~/PDFViewer/ConfigureDocumentURL?docURL=@TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder/@txt.ReadableFilePath/@txt.ReadableDocumentName'> ReadableDocument </a><br />
-                                    <a title="View Document" target="_blank" style="text-decoration:underline;" href='~/PDFViewer/ConfigureDocumentURL?docURL=@TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder/@txt.EditableFilePath/@txt.EditableDocumentName'> EditableDocument </a>
+                                    <a title="View Document" target="_blank" style="text-decoration:underline;" href='~/PDFViewer/ConfigureDocumentURL?docURL=@TEPL.QMS.Common.Constants.QMSConstants.PublishedFolder/@txt.ReadableFilePath/@txt.ReadableDocumentName'> Download </a>
+
                                 }
                             </td>
                         </tr>
