Commit code for Jquery code for DeleteArchivedDocument

--- a/DMS-Jasmine/TEPLQMS/Views/Request/Details.cshtml
+++ b/DMS-Jasmine/TEPLQMS/Views/Request/Details.cshtml
@@ -564,7 +564,7 @@
             });
         }
 
-        function DeleteDocument() {
+        function DeleteDocumentold() {
             bootbox.confirm("System will permanently deletes the document, Are you sure to Delete?", function (result) {
                 if (result) {
                     var DocumentID = $("#divDocumentID").text();
