All Print Request menu

--- a/DMS-Jasmine/TEPLQMS/Areas/Admin/Views/AllPrintRequests/Index.cshtml
+++ b/DMS-Jasmine/TEPLQMS/Areas/Admin/Views/AllPrintRequests/Index.cshtml
@@ -89,7 +89,7 @@
 
     <script>
         $(document).ready(function () {
-            InitiateInboxDataTable.init();            
+            InitiateAllPrintRequestDataTable.init();            
             $("#editabledatatable_filter").find('input[type="search"]').css("width", "250px"); 
             GetUserRequests();
         });
