Hide Archieved Documents

--- a/DMS-Jasmine/TEPLQMS/Views/Request/Details.cshtml
+++ b/DMS-Jasmine/TEPLQMS/Views/Request/Details.cshtml
@@ -29,7 +29,7 @@
                                             <i class="fa fa-history"></i> Revision History
                                         </a>
                                     }
-                                    <a href="javascript:ArchiveDocument();" class="btn btn-redcolor btn-sm add">
+                                    <a href="javascript:ArchiveDocument();" class="btn btn-redcolor btn-sm add" style="display:none">
                                         <i class="fa fa-remove"></i>Archive Document
                                     </a>
                                 }
