--- a/DMS-Jasmine/TEPLQMS/Views/Request/Index.cshtml
+++ b/DMS-Jasmine/TEPLQMS/Views/Request/Index.cshtml
@@ -18,7 +18,7 @@
                             @*<a href="javascript:ArchiveDocument();" class="btn btn-redcolor btn-sm add">
                     <i class="fa fa-remove"></i>Archive Document
                 </a>*@
-                            <a href="javascript:PendingArchiveDocument();" class="btn btn-redcolor btn-sm add">
+                            <a href="javascript:PendingArchiveDocument();" class="btn btn-redcolor btn-sm add" style="display:none">
                                 <i class="fa fa-remove"></i>Archive Document
                             </a>
                         }
