Priority 1 Bug fixed

--- a/DMS-MG/TEPLQMS/Areas/Admin/Views/ArchivedDocuments/Index.cshtml
+++ b/DMS-MG/TEPLQMS/Areas/Admin/Views/ArchivedDocuments/Index.cshtml
@@ -108,7 +108,7 @@
                                 Published On
                             </th>
                             <th>
-                                Revision
+                                Version
                             </th>
                             <th>
                                 Department
