--- a/DMS-MG/TEPLQMS/Areas/Admin/Views/ExternalDocument/Index.cshtml
+++ b/DMS-MG/TEPLQMS/Areas/Admin/Views/ExternalDocument/Index.cshtml
@@ -28,7 +28,7 @@
                             <th>
                                 Title
                             </th>
-                            <th>TCPL Document No</th>
+                            <th>TEPL Document No</th>
                             <th>Version</th>
 
                             <th>Department SPOC</th>
