--- a/DMS-MG/TEPLQMS/Views/ApprovePrintRequest/PrintRequestDetailsView.cshtml
+++ b/DMS-MG/TEPLQMS/Views/ApprovePrintRequest/PrintRequestDetailsView.cshtml
@@ -63,7 +63,7 @@
             </div>
             <div class="col-lg-6 col-sm-6 col-xs-12">
                 <div class="form-group">
-                    <label class="control-label col-lg-4"><strong>Revision No</strong></label>
+                    <label class="control-label col-lg-4"><strong>Version No</strong></label>
                     <label class=" col-lg-7 control-label text-align-left">
                         @ViewBag.Data.RevisionNo
                     </label>
