--- a/DMS-MG/TEPLQMS/Views/ApproveRequest/Index.cshtml
+++ b/DMS-MG/TEPLQMS/Views/ApproveRequest/Index.cshtml
@@ -42,8 +42,8 @@
                     <div id="divDocumentCategoryCode">@ViewBag.Data.DocumentCategoryCode</div>
                     <div id="divDocumentCategoryName">@ViewBag.Data.DocumentCategoryName</div>
                     <div id="divDocumentLevel">@ViewBag.Data.DocumentLevel</div>
-                    <div id="divFunctionCode">@ViewBag.Data.FunctionCode</div>
-                    <div id="divFunctionName">@ViewBag.Data.FunctionName</div>
+                    @*<div id="divFunctionCode">@ViewBag.Data.FunctionCode</div>
+                    <div id="divFunctionName">@ViewBag.Data.FunctionName</div>*@
                     <div id="divDepartmentCode">@ViewBag.Data.DepartmentCode</div>
                     <div id="divDepartmentName">@ViewBag.Data.DepartmentName</div>
                     <div id="divSectionCode">@ViewBag.Data.SectionCode</div>
@@ -336,8 +336,8 @@
             fileData.append('DocumentCategoryCode', $("#divDocumentCategoryCode").text()); 
             fileData.append('DocumentCategoryName', $("#divDocumentCategoryName").text());
             fileData.append('DocumentLevel', $("#divDocumentLevel").text());
-            fileData.append('FunctionCode', $("#divFunctionCode").text());
-            fileData.append('FunctionName', $("#divFunctionName").text());
+            //fileData.append('FunctionCode', $("#divFunctionCode").text());
+            //fileData.append('FunctionName', $("#divFunctionName").text());
             fileData.append('DepartmentCode', $("#divDepartmentCode").text());
             fileData.append('DepartmentName', $("#divDepartmentName").text());
             fileData.append('SectionCode', $("#divSectionCode").text());
