--- a/DMS-MG/TEPLQMS/Views/DocumentInitiate/Index.cshtml
+++ b/DMS-MG/TEPLQMS/Views/DocumentInitiate/Index.cshtml
@@ -87,7 +87,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-12 col-sm-12 col-xs-12">
-                                        <div class="col-lg-6 col-sm-6 col-xs-12">
+                                        @*<div class="col-lg-6 col-sm-6 col-xs-12">
                                             <div class="form-group">
                                                 <div class="col-lg-1"></div>
                                                 <div class="col-lg-9">
@@ -97,7 +97,7 @@
                                                     </select>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </div>*@
                                         <div class="col-lg-6 col-sm-6 col-xs-12">
                                             <div class="form-group" style="">
                                                 <div class="col-lg-1"></div>
@@ -244,8 +244,8 @@
                 fileData.append('DocumentCategoryID', $("#ddlDocCategory").val());
                 fileData.append('DocumentCategoryCode', $("#ddlDocCategory option:selected").attr('code'));
                 //fileData.append('DocumentLevel', $("#ddlDocCategory option:selected").attr('documentlevel'));
-                fileData.append('FunctionID', $("#ddlFunction").val());
-                fileData.append('FunctionCode', $("#ddlFunction option:selected").attr('code'));
+                //fileData.append('FunctionID', null);
+                //fileData.append('FunctionCode', null);
                 $.ajax({
                     url: "/DocumentInitiate/GenerateDocumentNumber",
                     dataType: "json",
@@ -350,16 +350,16 @@
                     fileData.append('DepartmentCode', '');
                     fileData.append('DepartmentName', '');
                 }
-                if ($("#ddlFunction").val() != '') {
-                    fileData.append('FunctionID', $("#ddlFunction").val());
-                    fileData.append('FunctionCode', $("#ddlFunction option:selected").attr('code'));
-                    fileData.append('FunctionName', $("#ddlFunction option:selected").text());
-                }
-                else {
-                    fileData.append('FunctionID', '');
-                    fileData.append('FunctionCode', '');
-                    fileData.append('FunctionName', '');
-                }
+                //if ($("#ddlFunction").val() != '') {
+                //    fileData.append('FunctionID', $("#ddlFunction").val());
+                //    fileData.append('FunctionCode', $("#ddlFunction option:selected").attr('code'));
+                //    fileData.append('FunctionName', $("#ddlFunction option:selected").text());
+                //}
+                //else {
+                //    fileData.append('FunctionID', null);
+                //    fileData.append('FunctionCode', null);
+                //    fileData.append('FunctionName', null);
+                //}
                 if ($("#ddlSection").val() != '') {
                     fileData.append('SectionID', $("#ddlSection").val());
                     fileData.append('SectionCode', $("#ddlSection option:selected").attr('code'));
