--- a/DMS-MG/TEPLQMS/Views/PrintRequest/Index.cshtml
+++ b/DMS-MG/TEPLQMS/Views/PrintRequest/Index.cshtml
@@ -87,15 +87,15 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-lg-6 col-sm-6 col-xs-12">
+                                        @*<div class="col-lg-6 col-sm-6 col-xs-12">
                                             <div class="form-group">
                                                 <label class="col-lg-4 control-label"><strong>Function</strong></label>
                                                 <label id="lblFunction" class="col-lg-7 control-label text-align-left"></label>
                                             </div>
-                                        </div>
+                                        </div>*@
                                         <div class="col-lg-6 col-sm-6 col-xs-12">
                                             <div class="form-group">
-                                                <label class="control-label col-lg-4"><strong>Last Published Revision</strong></label>
+                                                <label class="control-label col-lg-4"><strong>Last Published Version</strong></label>
                                                 <div class=" col-lg-7">
                                                     <label id="lblLastVersion" class="col-lg-7 control-label text-align-left"></label>
                                                 </div>
