--- a/DMS-MG/TEPLQMS/Views/Request/DraftDetails.cshtml
+++ b/DMS-MG/TEPLQMS/Views/Request/DraftDetails.cshtml
@@ -6,7 +6,7 @@
     <div class="col-lg-12 col-sm-12 col-xs-12">
         <div class="widget">
             <div class="cuwidget-header bordered-bottom bordered-blue">
-                <span class="cuwidget-caption"> <b>Request Details - Revision @{ @ViewBag.Data.DraftVersion.ToString().Split('.')[0] 
+                <span class="cuwidget-caption"> <b>Request Details - Version @{ @ViewBag.Data.DraftVersion.ToString().Split('.')[0] 
                     if (@ViewBag.isArchived == true) {<span style="background-color:yellow">[Archived]</span>}
                     }</b></span>                
                 <div class="widget-buttons">
@@ -164,7 +164,7 @@
                                     </div>
                                     <div class="col-lg-6 col-sm-6 col-xs-12">
                                         <div class="form-group">
-                                            <label class="control-label col-lg-4"><strong>Revision</strong></label>
+                                            <label class="control-label col-lg-4"><strong>Version</strong></label>
                                             <label class=" col-lg-7 control-label text-align-left">@ViewBag.Data.DraftVersion.ToString().Split('.')[0]</label>
                                         </div>
                                     </div>
