--- a/DMS-MG/TEPLQMS/Views/Shared/_Default.cshtml
+++ b/DMS-MG/TEPLQMS/Views/Shared/_Default.cshtml
@@ -148,7 +148,7 @@ Purchase: https://wrapbootstrap.com/theme/beyondadmin-adminapp-angularjs-mvc-WB0
                 <div class="navbar-header pull-left">
                     <a href="/Dashboard" class="navbar-brand">
                         <small>
-                            <img src="~/assets/img/logo.svg" alt="" /><strong style="font-size:40px;vertical-align:middle">TCPL</strong>
+                            <img src="~/assets/img/logo.svg" alt="" /><strong style="font-size:40px;vertical-align:middle">TEPL</strong>
                         </small>
                     </a>
                 </div>
@@ -257,7 +257,7 @@ Purchase: https://wrapbootstrap.com/theme/beyondadmin-adminapp-angularjs-mvc-WB0
                         <span class="copyright-symbol">
                             ©
                         </span>
-                        2024 TCPL - Document Management System
+                        2024 TEPL - Document Management System
                     </div>
                     <div class="footer-buttons">
                         <a href="#">
