--- a/DMS-MG/TEPLQMS/Areas/Admin/Views/DocumentNo/Index.cshtml
+++ b/DMS-MG/TEPLQMS/Areas/Admin/Views/DocumentNo/Index.cshtml
@@ -45,12 +45,12 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-6 col-sm-6 col-xs-12">
+                            @*<div class="col-lg-6 col-sm-6 col-xs-12">
                                 <div class="form-group">
                                     <label class="col-lg-4 control-label"><strong>Function</strong></label>
                                     <label class="col-lg-7 control-label text-align-left" id="lblFunction"></label>
                                 </div>
-                            </div>
+                            </div>*@
                             <div class="col-lg-6 col-sm-6 col-xs-12">
                                 <div class="form-group">
                                     <label class="col-lg-4 control-label"><strong>Document level</strong></label>
@@ -116,14 +116,14 @@
                                                 </select>
                                             </div>
                                         </div>
-                                        <div class="col-lg-3 col-sm-3 col-xs-12">
-                                            <div class="form-group">
-                                                <label>Function</label>
-                                                <select class="form-control" name="category" data-bv-field="category" id="ddlFunction">
-                                                    <option value="0">All</option>
-                                                </select>
-                                            </div>
-                                        </div>
+                                        @*<div class="col-lg-3 col-sm-3 col-xs-12">
+                                    <div class="form-group">
+                                        <label>Function</label>
+                                        <select class="form-control" name="category" data-bv-field="category" id="ddlFunction">
+                                            <option value="0">All</option>
+                                        </select>
+                                    </div>
+                                </div>*@
                                         <div class="col-lg-1 col-sm-1 col-xs-12">
                                             <div class="form-group">
                                                 <label style="color:white;">TEPL</label>
@@ -141,46 +141,27 @@
                     <table class="table table-striped table-hover table-bordered" id="editabledatatable">
                         <thead>
                             <tr role="row">
-                                <th>
-                                    ID
-                                </th>
-                                <th>
-                                    Department Name
-                                </th>
-                                <th>
-                                    Function Name
-                                </th>                                
-                                <th>
-                                    Section Name
-                                </th>                               
-                                <th>
-                                    Project Name
-                                </th>
-                                <th>
-                                    Category Name
-                                </th>
-                                <th>
-                                    Document Level
-                                </th>
-                                <th>
-                                    Serial No
-                                </th>
+                                <th>ID</th> <!-- No hidden attribute here -->
+                                <th>Department Name</th>
+                                <th>Section Name</th>
+                                <th>Project Name</th>
+                                <th>Category Name</th>
+                                <th>Document Level</th>
+                                <th>Serial No</th>
                             </tr>
                         </thead>
                         <tbody>
                             @foreach (var txt in ViewBag.Data)
                             {
                                 <tr>
-                                    <td>@txt.ID</td>
+                                    <td>@txt.ID</td> <!-- No hidden attribute here -->
                                     <td>@txt.DepartmentName</td>
-                                    <td>@txt.FunctionName</td>
                                     <td>@txt.SectionName</td>
                                     <td>@txt.ProjectName</td>
                                     <td>@txt.DocumentCategoryName</td>
                                     <td>@txt.DocumentLevel</td>
-                                    @*<td>@txt.SerialNo</td>*@
                                     <td>
-                                        <a id="ancEditNumber" href="javascript:EditSerialNo('@txt.ID','@txt.SerialNo','@txt.DepartmentName','@txt.SectionName','@txt.ProjectName','@txt.DocumentCategoryName', '@txt.FunctionName','@txt.DocumentLevel');"
+                                        <a id="ancEditNumber" href="javascript:EditSerialNo('@txt.ID','@txt.SerialNo','@txt.DepartmentName','@txt.SectionName','@txt.ProjectName','@txt.DocumentCategoryName','@txt.DocumentLevel');"
                                            style="font-size:13px;font-weight:bold;text-decoration:underline;">
                                             @txt.SerialNo
                                         </a>
@@ -190,6 +171,7 @@
                         </tbody>
                     </table>
                 </div>
+
             </div>
             
 
@@ -213,7 +195,29 @@
         $(document).ready(function () {
             $("#divMainPage").show();
             $("#divEditPane").hide();
-            InitiateDocumentNoDataTable.init();
+            var InitiateDocumentNoDataTable = {
+                init: function () {
+                    $('#editabledatatable').dataTable({
+                        "destroy": true,  // Allow re-initialization if already initialized
+                        "autoWidth": false,
+                        "searching": false,
+                        "lengthChange": false,
+                        "columns": [
+                            { "title": "ID", "visible": false },
+                            { "title": "Department Name" },
+                            { "title": "Section Name" },
+                            { "title": "Project Name" },
+                            { "title": "Category Name" },
+                            { "title": "Document Level" },
+                            { "title": "Serial No" }
+                        ]
+                    });
+                }
+            };
+            $(document).ready(function () {
+                InitiateDocumentNoDataTable.init();
+            });
+
             BindDropDownBoxes("../../DocumentInitiate/GetDropDownBoxes", $('#ddlDepartment'), $('#ddlDocCategory'), $('#ddlProject'), $('#ddlFunction'), 'All',true);
         });
         $("#btnCancel").click(function () {
@@ -245,18 +249,18 @@
                 category = $("#ddlDocCategory option:selected").attr('code');
             if ($("#ddlProject option:selected").text() != 'All')
                 project = $("#ddlProject option:selected").attr('code');
-            if ($("#ddlFunction option:selected").text() != 'All')
-                fnc = $("#ddlFunction option:selected").attr('code');
+            //if ($("#ddlFunction option:selected").text() != 'All')
+            //    fnc = $("#ddlFunction option:selected").attr('code');
             //alert($("#form-field-checkbox").val());
-            GetDocumentNumbers(dept, sec, project, category, fnc);
+            GetDocumentNumbers(dept, sec, project, category);
         });
-        function GetDocumentNumbers(dept, sec, project, category, fnc) {
+        function GetDocumentNumbers(dept, sec, project, category) {
             //Delete all existing records
             var table = $("#editabledatatable").dataTable();
             var rowsCount = table.$('tr').length;
             for (var z = 0; z < rowsCount; z++) {
                 var nRow = table.$('tr')[z];
-                table.fnDeleteRow(nRow);
+                table.fnClearTable();
             }
 
             $.ajax({
@@ -275,7 +279,7 @@
                 },
                 contentType: 'application/json; charset=utf-8',
                 cache: false,
-                data: JSON.stringify({ department: dept, section: sec, project: project, category: category, function: fnc }),
+                data: JSON.stringify({ department: dept, section: sec, project: project, category: category }),
                 success: function (data) {
                     if (data.success) {
                         if (data.message == 'error') {
@@ -288,9 +292,11 @@
                                 var id = data.message[z].ID.trim();
                                 //var numberLink = '<a href="EditSerialNo("'+id+'","' + data.message[z].SerialNo + '","' + data.message[z].DepartmentName + '","' + data.message[z].SectionName + '","' + data.message[z].ProjectName + '","' + data.message[z].DocumentCategoryName + '");" style="font-size:13px;font-weight:bold;text-decoration:underline;">' + data.message[z].SerialNo+'</a>';
                                 var numberLink = '<a  style="text-decoration:underline;" href="#" onclick="EditSerialNo(\'' + id + '\',\'' + data.message[z].SerialNo + '\',\'' + data.message[z].DepartmentName + '\',\'' + data.message[z].SectionName + '\',\'' + data.message[z].ProjectName + '\',\'' + data.message[z].DocumentCategoryName +'\');">' + data.message[z].SerialNo+'</a>';
-                                var record = [data.message[z].ID, data.message[z].DepartmentName, data.message[z].FunctionName, data.message[z].SectionName, data.message[z].ProjectName, data.message[z].DocumentCategoryName, data.message[z].DocumentLevel, numberLink];
+                                var record = [data.message[z].ID, data.message[z].DepartmentName, data.message[z].SectionName, data.message[z].ProjectName, data.message[z].DocumentCategoryName, data.message[z].DocumentLevel, numberLink];
                                 var nRow = $("#editabledatatable").dataTable().fnAddData(record);
                             }
+                            console.log(data.message[z]);
+                            console.log(record);
                         }
                     }
                 },
@@ -309,14 +315,13 @@
             $("#ddlProject").val(0);
         }
 
-        function EditSerialNo(ID, Number, Dept, Section, Project, Category, fnc, level) {
+        function EditSerialNo(ID, Number, Dept, Section, Project, Category, level) {
             $("#divSerialNoID").text(ID);
             $("#SerialNo").val(Number);
             $("#lblDepartment").text(Dept);
             $("#lblSection").text(Section);
             $("#lblProject").text(Project);
             $("#lblCategory").text(Category);
-            $("#lblFunction").text(fnc);
             $("#lblLevel").text(level);
 
             $("#divMainPage").hide();
