--- a/DMS-MG/TEPLQMS/Areas/Admin/Views/ExternalDocument/Edit.cshtml
+++ b/DMS-MG/TEPLQMS/Areas/Admin/Views/ExternalDocument/Edit.cshtml
@@ -72,7 +72,7 @@
                             <div class="row">
                                 <div class="col-lg-6 col-sm-6 col-xs-12">
                                     <div class="form-group">
-                                        <label class="control-label col-lg-4">TCPL Document No<span class="mandatory">*</span></label>
+                                        <label class="control-label col-lg-4">TEPL Document No<span class="mandatory">*</span></label>
                                         <div class=" col-lg-8">
                                             <input title="Document No" class=" form-control manfield" id="txtDocumentNo" name="txtDocumentNo" type="text" maxlength="100" placeholder="Document No">
                                         </div>
