--- a/DMS-MG/TEPLQMS/Views/ApproveRequest/OtherView.cshtml
+++ b/DMS-MG/TEPLQMS/Views/ApproveRequest/OtherView.cshtml
@@ -48,14 +48,14 @@
                     </label>
                 </div>
             </div>
-            <div class="col-lg-6 col-sm-6 col-xs-12">
+            @*<div class="col-lg-6 col-sm-6 col-xs-12">
                 <div class="form-group">
                     <label class="col-lg-4 control-label"><strong>Function</strong></label>
                     <label class="col-lg-7 control-label text-align-left">
                         @ViewBag.Data.FunctionName
                     </label>
                 </div>
-            </div>
+            </div>*@
         </div>
         <div class="row">
             <div class="col-lg-6 col-sm-6 col-xs-12">
@@ -68,7 +68,7 @@
             </div>
             <div class="col-lg-6 col-sm-6 col-xs-12">
                 <div class="form-group">
-                    <label class="control-label col-lg-4"><strong>New Revision</strong></label>
+                    <label class="control-label col-lg-4"><strong>New Version</strong></label>
                     <label class=" col-lg-7 control-label text-align-left">
                         @ViewBag.DraftVersion
                     </label>
