--- a/DMS-MG/TEPLQMS/Views/Dashboard/ServerLoad.cshtml
+++ b/DMS-MG/TEPLQMS/Views/Dashboard/ServerLoad.cshtml
@@ -111,7 +111,7 @@
                                 Published On
                             </th>
                             <th>
-                                Revision
+                                Version
                             </th>
                             <th>
                                 Department
