--- a/DMS-MG/TEPLQMS/Views/Request/Details.cshtml
+++ b/DMS-MG/TEPLQMS/Views/Request/Details.cshtml
@@ -6,7 +6,7 @@
     <div class="col-lg-12 col-sm-12 col-xs-12">
         <div class="widget">
             <div class="cuwidget-header bordered-bottom bordered-blue">
-                <span class="cuwidget-caption"> <b>Request Details - Revision @{ @ViewBag.Data.DraftVersion.ToString().Split('.')[0] 
+                <span class="cuwidget-caption"> <b>Request Details - Version @{ @ViewBag.Data.DraftVersion.ToString().Split('.')[0] 
                     if (@ViewBag.isArchived == true) {<span style="background-color:yellow">[Archived]</span>}
                     }</b></span>
                 @*<div style="display:inline-block;line-height:36px;background-color:antiquewhite;">
@@ -150,14 +150,14 @@
                                             </label>
                                         </div>
                                     </div>
-                                    <div class="col-lg-6 col-sm-6 col-xs-12">
+                                    @*<div class="col-lg-6 col-sm-6 col-xs-12">
                                         <div class="form-group">
                                             <label class="col-lg-4 control-label"><strong>Function</strong></label>
                                             <label class="col-lg-7 control-label text-align-left">
                                                 @ViewBag.Data.FunctionName
                                             </label>
                                         </div>
-                                    </div>
+                                    </div>*@
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-6 col-sm-6 col-xs-12">
@@ -170,7 +170,7 @@
                                     </div>
                                     <div class="col-lg-6 col-sm-6 col-xs-12">
                                         <div class="form-group">
-                                            <label class="control-label col-lg-4"><strong>Revision</strong></label>
+                                            <label class="control-label col-lg-4"><strong>Version</strong></label>
                                             <label class=" col-lg-7 control-label text-align-left">@ViewBag.Data.DraftVersion.ToString().Split('.')[0]</label>
                                         </div>
                                     </div>
