--- a/DMS-MG/TEPLQMS/Views/Request/History.cshtml
+++ b/DMS-MG/TEPLQMS/Views/Request/History.cshtml
@@ -7,7 +7,7 @@
     <div class="col-xs-12 col-md-12">
         <div class="widget">
             <div class="widget-header">
-                <span class="widget-caption topfocus" tabindex='1' style="font-size:25px !important;"><b><span id="spanTitle">Document Revisions</span></b></span>
+                <span class="widget-caption topfocus" tabindex='1' style="font-size:25px !important;"><b><span id="spanTitle">Document Versions</span></b></span>
             </div>            
             <div class="widget-body">
                 <table class="table table-striped table-hover table-bordered" id="editabledatatable">
@@ -19,7 +19,7 @@
                                 Document Number
                             </th>
                             <th>
-                                Revision
+                                Version
                             </th>
                             @*<th>
                                 Edit Version
