Jasmine Label Removed From MG Project Code

--- a/DMS-MG/TEPLQMS/Views/Shared/_Default.cshtml
+++ b/DMS-MG/TEPLQMS/Views/Shared/_Default.cshtml
@@ -159,7 +159,7 @@ Purchase: https://wrapbootstrap.com/theme/beyondadmin-adminapp-angularjs-mvc-WB0
                 </div>
                 <div id="divSiteType" style="display:none;">@TEPL.QMS.Common.Constants.QMSConstants.SiteType</div>
                 <div class="navbar-header" style="margin-left: 60px; font-size: 30px; text-align: center; vertical-align: middle; color: white; float: left;">
-                    <strong>Jasmine - Document Management System</strong>
+                    <strong>Document Management System</strong>
                     <span style="color:red">(@TEPL.QMS.Common.Constants.QMSConstants.SiteType - @TEPL.QMS.Common.Constants.QMSConstants.SiteName)</span>
                 </div>
 
